--- a/src/styles/mixins.scss
+++ b/src/styles/mixins.scss
@@ -22,18 +22,17 @@
 // In this example, the element will have a dark-colored outline for debugging purposes.
 
 @mixin debug($mode) {
+	// Check if the mode is 'light'
+	@if $mode ==light {
+		// If it is, set the outline to .25rem groove and a random light color
+		outline: 0.25rem groove random-light-color();
+	}
 
-    // Check if the mode is 'light'
-    @if $mode ==light {
-        // If it is, set the outline to .25rem groove and a random light color
-        outline: 0.25rem groove random-light-color();
-    }
-
-    // Check if the mode is 'dark'
-    @else if $mode ==dark {
-        // If it is, set the outline to .25rem groove and a random dark color
-        outline: 0.25rem groove random-dark-color();
-    }
+	// Check if the mode is 'dark'
+	@else if $mode ==dark {
+		// If it is, set the outline to .25rem groove and a random dark color
+		outline: 0.25rem groove random-dark-color();
+	}
 }
 
 // Mixin to create elements with equal height and width.
@@ -51,8 +50,8 @@
 // In this example, the `.square` class will have both height and width set to 200px.
 
 @mixin equal($h-w: 100%) {
-    height: $h-w; // Set height to specified value (default is 100%).
-    width: $h-w; // Set width to specified value (default is 100%).
+	height: $h-w; // Set height to specified value (default is 100%).
+	width: $h-w; // Set width to specified value (default is 100%).
 }
 
 // Mixin for creating a flexible layout using Flexbox.
@@ -71,10 +70,10 @@
 // }
 
 @mixin flex($type: flex, $d: row, $j: center, $a: center) {
-    display: if($type == inline, inline-flex, flex); // Set display to inline-flex or flex.
-    flex-direction: $d; // Set the direction of flex items (row or column).
-    justify-content: $j; // Set horizontal alignment of flex items.
-    align-items: $a; // Set vertical alignment of flex items.
+	display: if($type == inline, inline-flex, flex); // Set display to inline-flex or flex.
+	flex-direction: $d; // Set the direction of flex items (row or column).
+	justify-content: $j; // Set horizontal alignment of flex items.
+	align-items: $a; // Set vertical alignment of flex items.
 }
 
 // Mixin for applying font styles with customizable properties.
@@ -95,15 +94,15 @@
 // and a bold weight. If 'primary' is a key in the $ff map, it will use the corresponding value.
 
 @mixin font($f: null, $s: null, $w: null) {
-    $font-family: if($f !=null and map.has-key($ff, $f), map.get($ff, $f), $f);
-    $font-size: if($s !=null and map.has-key($fz, $s), map.get($fz, $s), $s);
-    $font-weight: if($w !=null and map.has-key($fw, $w), map.get($fw, $w), $w);
+	$font-family: if($f !=null and map.has-key($ff, $f), map.get($ff, $f), $f);
+	$font-size: if($s !=null and map.has-key($fz, $s), map.get($fz, $s), $s);
+	$font-weight: if($w !=null and map.has-key($fw, $w), map.get($fw, $w), $w);
 
-    font: {
-        family: $font-family;
-        size: $font-size;
-        weight: $font-weight;
-    }
+	font: {
+		family: $font-family;
+		size: $font-size;
+		weight: $font-weight;
+	}
 }
 
 // Mixin for generating CSS custom properties (variables) from a map with an optional prefix.
@@ -142,15 +141,13 @@
 // --accent: #e74c3c;
 
 @mixin generate-css-vars($map: null, $prefix: null) {
-    @each $key, $value in $map {
-        @if $prefix {
-            --#{$prefix}-#{$key}: #{$value};
-        }
-
-        @else {
-            --#{$key}: #{$value};
-        }
-    }
+	@each $key, $value in $map {
+		@if $prefix {
+			--#{$prefix}-#{$key}: #{$value};
+		} @else {
+			--#{$key}: #{$value};
+		}
+	}
 }
 
 // Mixin for creating a CSS Grid layout.
@@ -170,9 +167,9 @@
 // each sized to take up an equal fraction of the available space.
 
 @mixin grid($r-c: null, $f-u: 1fr) {
-    display: grid;
-    grid-template-columns: repeat($r-c, $f-u);
-    grid-template-rows: repeat($r-c, $f-u);
+	display: grid;
+	grid-template-columns: repeat($r-c, $f-u);
+	grid-template-rows: repeat($r-c, $f-u);
 }
 
 // Mixin for responsive breakpoints to apply styles conditionally.
@@ -198,20 +195,19 @@
 // }
 
 @mixin r-bp($type, $bp) {
+	// Apply styles for minimum breakpoint.
+	@if $type ==min {
+		@media (min-width: $bp) {
+			@content; // Insert content here when the condition is met.
+		}
+	}
 
-    // Apply styles for minimum breakpoint.
-    @if $type ==min {
-        @media (min-width: $bp) {
-            @content; // Insert content here when the condition is met.
-        }
-    }
-
-    // Apply styles for maximum breakpoint.
-    @else if $type ==max {
-        @media (max-width: $bp) {
-            @content; // Insert content here when the condition is met.
-        }
-    }
+	// Apply styles for maximum breakpoint.
+	@else if $type ==max {
+		@media (max-width: $bp) {
+			@content; // Insert content here when the condition is met.
+		}
+	}
 }
 
 // Mixin for responsive width based on a specified type (min or max).
@@ -238,16 +234,15 @@
 // whichever is larger.
 
 @mixin r-w($type, $p: 100%, $w) {
+	// Check if the type is 'min' to set the minimum width.
+	@if $type ==min {
+		width: min($p, $w);
+	}
 
-    // Check if the type is 'min' to set the minimum width.
-    @if $type ==min {
-        width: min($p, $w);
-    }
-
-    // Check if the type is 'max' to set the maximum width.
-    @else if $type ==max {
-        width: max($p, $w);
-    }
+	// Check if the type is 'max' to set the maximum width.
+	@else if $type ==max {
+		width: max($p, $w);
+	}
 }
 
 // Mixin for adding spacing between child elements in a container.
@@ -272,22 +267,21 @@
 // In this example, all direct child elements will have left and right margins of 15px.
 
 @mixin space($type, $size) {
-    &>* {
+	& > * {
+		// Target all direct child elements.
+		// Apply vertical spacing between elements.
+		@if $type == "v" {
+			margin-top: $size; // Set top margin.
 
-        // Target all direct child elements.
-        // Apply vertical spacing between elements.
-        @if $type =="v" {
-            margin-top: $size; // Set top margin.
+			&:first-child {
+				margin-top: 0; // Remove top margin for the first child.
+			}
+		}
 
-            &:first-child {
-                margin-top: 0; // Remove top margin for the first child.
-            }
-        }
-
-        // Apply horizontal spacing between elements.
-        @else if $type =="h" {
-            margin-left: $size; // Set left margin.
-            margin-right: $size; // Set right margin.
-        }
-    }
+		// Apply horizontal spacing between elements.
+		@else if $type == "h" {
+			margin-left: $size; // Set left margin.
+			margin-right: $size; // Set right margin.
+		}
+	}
 }
